...
            android:adjustViewBounds="true"
            android:contentDescription="Helios icon"
            android:scaleType="centerInside"
            android:src="@drawable/helios_logo_v1" />

        <TextView
            android:id="@+id/submenu_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.Helios.ScreenTitle" />
    </LinearLayout>

    <TextView
        android:id="@+id/submenu_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.Helios.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/submenu_title_container"
...
