<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/eventsFragment"
        android:icon="@drawable/ic_nav_events"
        android:title="Events" />
    <item
        android:id="@+id/scanQrFragment"
        android:icon="@drawable/ic_nav_scan_qr"
        android:title="Scan QR" />
    <item
        android:id="@+id/organizeFragment"
        android:icon="@drawable/ic_nav_organize"
        android:title="Organize" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_nav_profile"
        android:title="Profile" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_nav_notifications"
        android:title="Notifs" />
    <item
        android:id="@+id/adminFragment"
        android:icon="@drawable/ic_nav_admin"
        android:title="Admin"
        android:visible="false" />
</menu>
