...
        <include
            android:id="@+id/include_user_banner"
            layout="@layout/include_user_banner" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:navGraph="@navigation/nav_graph"
        app:defaultNavHost="true"
        app:layout_constraintTop_toBottomOf="@id/top_inset_container"
...
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottom_nav_top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:barrierAllowsGoneWidgets="false"
        app:constraint_referenced_ids="bottom_nav,bottom_nav_organizer" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/helios_bottom_nav_min_height"
...
